# URL-Shortening-Service

./: .coverage  .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py  short_urls.py
app/core/: config.py  exceptions.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_create_short_urls.py
app/models/: short_url.py
app/schemas/: short_url.py
app/services/: url_shortener.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_service.py
